--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Body Mass Index</string>
-    <string name="bmi_label">Body mass index</string>
+    <string name="bmi_label">BMI Calculator</string>
     <string name="height_label">Height (m)</string>
     <string name="weight_label">Weight (kg)</string>
-    <string name="bmi_result">Body mass index is %s</string>
+    <string name="bmi_result">BMI: </string>
 </resources>
